VMC-327: fixed issue with latency not showing in seconds and flipped arrow horizontally for replica cluster

--- a/src/frontend/org/voltdb/dbmonitor/css/resources/layout.css
+++ b/src/frontend/org/voltdb/dbmonitor/css/resources/layout.css
@@ -2061,6 +2061,8 @@ h3.ui-state-active {
 display:block; position: relative; top:8px; margin:0 10px;  }
 .arrowSingle { background-image: url(images/arrow.png); width:190px; height:22px;
 display:block; position: relative; top:8px; margin:0 10px;  }
+.arrowSingleLeft { background-image: url(images/left_arrow.png); width:190px; height:22px;
+display:block; position: relative; top:8px; margin:0 10px;  }
 .drRelationRight { float:left; }
 
 /*********************jquery ui class override*********************/
